src/styles/style.css
/* ... */
.BoardCardWithCustomProperties--hover .toggl-button {
  opacity: 1;
}
.BoardCardWithCustomProperties-assigneeAndDueDate .toggl-button {
  margin-left: 10px;
}

/********* PODIO *********/
.toggl-button.podio {
  width: 65px;
  margin-left: 4px;
}

/********* GITLAB *********/
.toggl-button.gitlab {
  margin-top: 7px;
}

@media (max-width: 991px) {
  .toggl-button.gitlab {
    margin-right: 8px;
  }
}

/********* JIRA *********/
.toggl-button.jira {
  margin-top: 0.2em;
}

.toggl-button.jira2017 {
  margin-top: 0.2em;
  margin-left: 10px;
  cursor: pointer !important;
  color: #42526e !important;
  box-shadow: none;
}

.toggl-button.jira2018 {
  margin-left: 8px;
  margin-top: 0;
  position: relative; /* margin interferes with Jira layout, using relative pos instead */
  top: 2px;
  cursor: pointer;
}

.toggl-button.jira2018-modal {
  margin-top: 0.5em;
  margin-left: 0;
  cursor: pointer;
}

/********* UNFUDDLE *********/
.toggl-button.unfuddle {
  margin-left: 4px;
  line-height: 18px;
  padding-left: 18px;
  background-size: 16px;
}

/********* TRELLO *********/
.toggl-button.trello {
  text-decoration: none;
  cursor: pointer;
  color: #737373;
}

.toggl-button.trello-list:not(.toggl-button-edit-form-button) {
  visibility: hidden;
  pointer-events: none;
}
.checklist-item-details:hover .toggl-button.trello-list, .toggl-button.trello-list.active:not(.toggl-button-edit-form-button) {
  visibility: visible;
  pointer-events: all;
  position: absolute;
  top: 0;
  right: 32px;
  background-position: center !important;
}
.trello-tb-wrapper .toggl-button {
  color: #444;
}

/********* BASECAMP *********/
.toggl-button.basecamp {
  font-size: 12px;
  height: 14px;
  margin-left: 3px;
  line-height: 14px;
  padding-left: 19px;
  background-size: 17px;
  visibility: hidden;
}

/********* BASECAMP CLASSIC *********/
.toggl-button.basecamphq {
  font-size: 12px;
  height: 15px;
  margin-left: 3px;
  line-height: 14px;
  padding-left: 19px;
  background-size: 17px;
  visibility: hidden;
}

.toggl-button.basecamphq:hover {
  color: #000000 !important;
}

.active_selection .toggl-button.basecamphq,
.toggl-button.basecamphq[data-behavior='selectable_target'] {
  visibility: visible !important;
}

/********* BASECAMP 3 *********/
.todo .toggl-button.basecamp3 {
  transition: opacity 150ms ease;
  display: inline;
  position: absolute;
  opacity: 0;
  margin-top: 2px;
  margin-left: 6px;
  white-space: nowrap;
}

.todo__unassigned-unscheduled + .toggl-button.basecamp3 {
  margin-left: 90px;
}

.todo:not(.selected):hover .toggl-button.basecamp3 {
  opacity: 1;
}

.card-grid .toggl-button.basecamp3 {
  opacity: 0 !important;
}

/********* TEAMWEEK *********/
.toggl-button.teamweek-new {
  color: rgba(47, 47, 47, 0.8);
  margin-right: 10px;
}

#toggl-button-edit-form .toggl-button.teamweek-new {
  position: static;
}

/********* Produck *********/
.toggl-button.produck {
  padding-left: 25px;
  color: #a9b0c4;
  font-size: 13px;
}
.toggl-button.produck:hover {
  color: #2693ff;
  text-decoration: none;
}

/********* PRODUCTEEV *********/
.toggl-button.producteev {
  margin-left: 12px;
  margin-bottom: 2px;
}

/********* REDBOOTH *********/
.toggl-button.redbooth {
  font-size: 12px;
  line-height: 16px;
  padding-left: 18px;
  background-size: 16px;
}

/********* WORKSECTION *********/
#tmenu2 .toggl-button.worksection {
  margin-top: 9px;
  padding-top: 0px;
  line-height: 21px;
  padding-left: 21px;
}

/********* REVIEWBOARD *********/
.toggl-button.reviewboard {
  margin-top: 4px;
  margin-left: 6px;
}

/********* SIFTER *********/
.toggl-button.sifterapp {
  float: right;
}

.issue-detail-subject .toggl-button.sifterapp {
  margin-top: 7px;
}

/********* GOOGLE DOCS *********/
.toggl-button.google-docs:not(.toggl-button-edit-form-button) {
  background-size: 17px;
  padding-left: 19px;
  margin-left: 5px;
}

.toggl-button.google-docs.min:not(.toggl-button-edit-form-button) {
  margin-bottom: -10px;
  margin-left: 5px;
}

/********* REDMINE *********/
.toggl-button.redmine {
  float: right;
  font-size: 0.8em;
  font-weight: normal;
  margin-top: 4px;
}

/********* CAPSULECRM *********/
.toggl-button.capsule {
  position: absolute;
  margin-left: 5px;
}

.task-item-title .toggl-button.capsule {
  position: relative;
  top: 5px;
  margin-top: -5px;
}
/********* ZENDESK *********/
.toggl-button.zendesk:not(.toggl-button-edit-form-button) {
  position: absolute;
  right: 0;
  bottom: 0;
  padding: 0 30px 25px 24px;

  font-weight: initial;
}

/********* ANYDO *********/
.toggl-button.anydo {
  color: #099acb;
  margin-left: 10px;
}

.toggl-button.anydo--2018 {
  margin: 3px 25px;
  position: absolute;
  right: 0;
}

.TaskItem .toggl-button.anydo--2018__taskItem {
  visibility: hidden;
  position: absolute;
  top: 15px;
  right: 15px;
}

*:hover > .toggl-button.anydo--2018,
*:hover > .toggl-button.anydo--2018__taskItem {
  visibility: visible;
}

/********* WUNDERLIST *********/
.toggl-button.wunderlist {
  text-decoration: none;
  cursor: pointer;
  color: #737373;
  margin: 0px;
  display: inline;
  opacity: 0.2;
}

.taskItem-toggl {
  z-index: 1;
  display: inline;
  margin-bottom: 0px;
  padding-right: 10px;
  line-height: 100%;
  position: relative;
  top: 0;
  bottom: 0;
  left: 0;
  float: right;
  margin-top: 3px;
}

.detailItem-toggl {
  position: relative;
  left: 5px;
  top: -7px;
}

.toggl.done .detailItem-toggl {
  display: none;
}

.toggl.done .section-icon {
  padding-left: 22px;
}

.toggl > .taskItem-titleWrapper-title,
.toggl > .taskItem-titleMeta-info {
  margin-left: 25px;
}

/********* TODOIST *********/
.toggl-button.todoist {
  visibility: hidden;
}

.toggl-button.todoist.active {
  visibility: visible;
}

.task_item:hover .toggl-button.todoist {
  visibility: visible;
}
/* ... */

